--- a/bundles/org.openhab.binding.daikin.onecta/src/main/resources/OH-INF/i18n/onecta.properties
+++ b/bundles/org.openhab.binding.daikin.onecta/src/main/resources/OH-INF/i18n/onecta.properties
@@ -9,6 +9,8 @@ thing-type.onecta.account.label = Daikin Onecta Account
 thing-type.onecta.account.description = This is the account for which your device(s) are registered at Diakin Onecta.
 thing-type.onecta.device.label = Diakin Onecta device
 thing-type.onecta.device.description = Diakin Onecta device
+thing-type.onecta.domesticHotWaterTank.label = Diakin Onecta Indoor Unit
+thing-type.onecta.domesticHotWaterTank.description = Diakin Onecta Indoor Unit
 thing-type.onecta.domesticHotWaterTank.label = Diakin Onecta Domestic HotWater Tank
 thing-type.onecta.domesticHotWaterTank.description = Diakin Onecta Domestic HotWater Tank
 thing-type.onecta.gateway.label = Diakin Onecta gateway
@@ -39,6 +41,8 @@ thing-type.config.onecta.device.unitID.description = Diakin unit
 thing-type.config.onecta.domesticHotWaterTank.refreshDelay.label = Refresh delay.
 thing-type.config.onecta.domesticHotWaterTank.refreshDelay.description = Channel refresh delay after update command in sec
 thing-type.config.onecta.domesticHotWaterTank.unitID.label = Unit ID
+thing-type.config.onecta.domesticHotWaterTank.unitID.description = Diakin Indoor unit
+thing-type.config.onecta.domesticHotWaterTank.unitID.label = Unit ID
 thing-type.config.onecta.domesticHotWaterTank.unitID.description = Diakin unit
 thing-type.config.onecta.gateway.refreshDelay.label = Refresh delay.
 thing-type.config.onecta.gateway.refreshDelay.description = Channel refresh delay after update command in sec
@@ -51,6 +55,8 @@ channel-group-type.onecta.basicGroup.label = Basic
 channel-group-type.onecta.basicGroup.description = BasicGroup related information
 channel-group-type.onecta.basicGroupGateway.label = Basic
 channel-group-type.onecta.basicGroupGateway.description = BasicGroup related information
+channel-group-type.onecta.basicGroupIndoorUnit.label = Basic
+channel-group-type.onecta.basicGroupIndoorUnit.description = BasicGroup related information
 channel-group-type.onecta.basicGroupWaterTank.label = Basic
 channel-group-type.onecta.basicGroupWaterTank.description = BasicGroup related information
 channel-group-type.onecta.consumptionDataCoolingGroup.label = Consumption data cooling
@@ -574,6 +580,22 @@ channel-type.onecta.hwt-settempstep.label = Set Point value steps
 channel-type.onecta.hwt-settempstep.description = The set point temperature value steps
 channel-type.onecta.hwt-tanktemperature.label = Tank temperature
 channel-type.onecta.hwt-tanktemperature.description = Tank temperature
+channel-type.onecta.idu-deltadvalue.label = DeltaD temperature
+channel-type.onecta.idu-deltadvalue.description = DeltaD temperature
+channel-type.onecta.idu-drykeepsetting.label = Dry keep setting
+channel-type.onecta.idu-drykeepsetting.description = Dry keep setting
+channel-type.onecta.idu-eepromversion.label = Eeprom version
+channel-type.onecta.idu-eepromversion.description = Eeprom version
+channel-type.onecta.idu-fanmotorratationspeed.label = Fanmotor rotation speed
+channel-type.onecta.idu-fanmotorratationspeed.description = Fanmotor rotation speed
+channel-type.onecta.idu-heatexchangertemp.label = Heatexchanger temperature
+channel-type.onecta.idu-heatexchangertemp.description = Heatexchanger temperature
+channel-type.onecta.idu-modelinfo.label = Model information
+channel-type.onecta.idu-modelinfo.description = Model information
+channel-type.onecta.idu-softwareversion.label = Software version
+channel-type.onecta.idu-softwareversion.description = Software version
+channel-type.onecta.idu-suctiontemp.label = Suction temperature
+channel-type.onecta.idu-suctiontemp.description = Suction temperature
 
 # channel types
 
