Add Indoor unit

--- a/bundles/org.openhab.binding.daikin.onecta/src/main/resources/OH-INF/i18n/onecta.properties
+++ b/bundles/org.openhab.binding.daikin.onecta/src/main/resources/OH-INF/i18n/onecta.properties
@@ -9,12 +9,12 @@ thing-type.onecta.account.label = Daikin Onecta Account
 thing-type.onecta.account.description = This is the account for which your device(s) are registered at Diakin Onecta.
 thing-type.onecta.device.label = Diakin Onecta device
 thing-type.onecta.device.description = Diakin Onecta device
-thing-type.onecta.domesticHotWaterTank.label = Diakin Onecta Indoor Unit
-thing-type.onecta.domesticHotWaterTank.description = Diakin Onecta Indoor Unit
 thing-type.onecta.domesticHotWaterTank.label = Diakin Onecta Domestic HotWater Tank
 thing-type.onecta.domesticHotWaterTank.description = Diakin Onecta Domestic HotWater Tank
 thing-type.onecta.gateway.label = Diakin Onecta gateway
 thing-type.onecta.gateway.description = Diakin Onecta gateway
+thing-type.onecta.indoorUnit.label = Diakin Onecta Indoor Unit
+thing-type.onecta.indoorUnit.description = Diakin Onecta Indoor Unit
 
 # thing types config
 
@@ -41,13 +41,13 @@ thing-type.config.onecta.device.unitID.description = Diakin unit
 thing-type.config.onecta.domesticHotWaterTank.refreshDelay.label = Refresh delay.
 thing-type.config.onecta.domesticHotWaterTank.refreshDelay.description = Channel refresh delay after update command in sec
 thing-type.config.onecta.domesticHotWaterTank.unitID.label = Unit ID
-thing-type.config.onecta.domesticHotWaterTank.unitID.description = Diakin Indoor unit
-thing-type.config.onecta.domesticHotWaterTank.unitID.label = Unit ID
 thing-type.config.onecta.domesticHotWaterTank.unitID.description = Diakin unit
 thing-type.config.onecta.gateway.refreshDelay.label = Refresh delay.
 thing-type.config.onecta.gateway.refreshDelay.description = Channel refresh delay after update command in sec
 thing-type.config.onecta.gateway.unitID.label = Unit ID
 thing-type.config.onecta.gateway.unitID.description = Diakin unit
+thing-type.config.onecta.indoorUnit.unitID.label = Unit ID
+thing-type.config.onecta.indoorUnit.unitID.description = Diakin Indoor unit
 
 # channel group types
 
